@@ -37,6 +37,8 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
+import org.apache.commons.collections4.BidiMap;
+import org.apache.commons.collections4.bidimap.DualHashBidiMap;
 import org.apache.commons.lang3.StringUtils;
 import org.hibernate.engine.jdbc.internal.BasicFormatterImpl;
 import org.pmiops.workbench.api.BigQueryService;
@@ -55,6 +57,7 @@ import org.pmiops.workbench.config.WorkbenchConfig;
 import org.pmiops.workbench.dataset.mapper.DataSetMapper;
 import org.pmiops.workbench.db.dao.DataSetDao;
 import org.pmiops.workbench.db.dao.WgsExtractCromwellSubmissionDao;
+import org.pmiops.workbench.db.model.DbCdrVersion;
 import org.pmiops.workbench.db.model.DbCohort;
 import org.pmiops.workbench.db.model.DbConceptSet;
 import org.pmiops.workbench.db.model.DbConceptSetConceptId;
@@ -86,6 +89,10 @@ import org.pmiops.workbench.model.ResourceType;
 import org.pmiops.workbench.model.SearchGroup;
 import org.pmiops.workbench.model.SearchGroupItem;
 import org.pmiops.workbench.model.SearchParameter;
+import org.pmiops.workbench.tanagra.ApiException;
+import org.pmiops.workbench.tanagra.api.TanagraApi;
+import org.pmiops.workbench.tanagra.model.EntityOutputPreview;
+import org.pmiops.workbench.tanagra.model.ExportPreviewRequest;
 import org.pmiops.workbench.utils.WorkbenchStringUtils;
 import org.pmiops.workbench.workspaces.resources.UserRecentResourceService;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -100,6 +107,8 @@ public class DataSetServiceImpl implements DataSetService {
   private static final String MISSING_EXTRACTION_DIR_PLACEHOLDER =
       "\"WORKSPACE_STORAGE_VCF_DIRECTORY_GOES_HERE\"";
   private static final String CDR_STRING = "\\$\\{projectId}.\\$\\{dataSetId}.";
+
+  private static final String LOCAL_CDR_STRING = "all-of-us-ehr-dev";
 
   private static final String PYTHON_CDR_ENV_VARIABLE =
       "\"\"\" + os.environ[\"WORKSPACE_CDR\"] + \"\"\".";
@@ -171,6 +180,26 @@ public class DataSetServiceImpl implements DataSetService {
           .put(PrePackagedConceptSetEnum.SURVEY_COVID_VACCINE, 1741006L)
           .put(PrePackagedConceptSetEnum.SURVEY_PFHH, 1740639L)
           .build();
+
+  private final BidiMap<String, Domain> TANAGRA_DOMAIN_MAP =
+      new DualHashBidiMap<>(
+          ImmutableMap.<String, Domain>builder()
+              .put("person", Domain.PERSON)
+              .put("heartRateSummary", Domain.FITBIT_HEART_RATE_SUMMARY)
+              .put("heartRateLevel", Domain.FITBIT_HEART_RATE_LEVEL)
+              .put("activitySummary", Domain.FITBIT_ACTIVITY)
+              .put("stepsIntraday", Domain.FITBIT_INTRADAY_STEPS)
+              .put("sleepLevel", Domain.FITBIT_SLEEP_LEVEL)
+              .put("sleepDailySummary", Domain.FITBIT_SLEEP_DAILY_SUMMARY)
+              .put("conditionOccurrence", Domain.CONDITION)
+              .put("procedureOccurrence", Domain.PROCEDURE)
+              .put("observationOccurrence", Domain.OBSERVATION)
+              .put("ingredientOccurrence", Domain.DRUG)
+              .put("measurementOccurrence", Domain.MEASUREMENT)
+              .put("visitOccurrence", Domain.VISIT)
+              .put("deviceOccurrence", Domain.DEVICE)
+              .put("surveyOccurrence", Domain.SURVEY)
+              .build());
 
   /*
    * Stores the associated set of selects and joins for values for the data set builder,
@@ -250,6 +279,7 @@ public class DataSetServiceImpl implements DataSetService {
   private final UserRecentResourceService userRecentResourceService;
   private final Clock clock;
   private final Provider<DbUser> userProvider;
+  private final Provider<TanagraApi> tanagraApiProvider;
 
   @Autowired
   @VisibleForTesting
@@ -268,7 +298,8 @@ public class DataSetServiceImpl implements DataSetService {
       UserRecentResourceService userRecentResourceService,
       Provider<WorkbenchConfig> workbenchConfigProvider,
       Clock clock,
-      Provider<DbUser> userProvider) {
+      Provider<DbUser> userProvider,
+      Provider<TanagraApi> tanagraApiProvider) {
     this.bigQueryService = bigQueryService;
     this.cohortBuilderService = cohortBuilderService;
     this.cohortService = cohortService;
@@ -284,6 +315,7 @@ public class DataSetServiceImpl implements DataSetService {
     this.workbenchConfigProvider = workbenchConfigProvider;
     this.clock = clock;
     this.userProvider = userProvider;
+    this.tanagraApiProvider = tanagraApiProvider;
   }
 
   @Override
@@ -364,7 +396,7 @@ public class DataSetServiceImpl implements DataSetService {
                 Domain.PHYSICAL_MEASUREMENT_CSS.equals(domain) ? Domain.MEASUREMENT : domain)
             .stream()
             .map(field -> field.getName().toLowerCase())
-            .collect(Collectors.toList());
+            .toList();
 
     final List<String> filteredDomainColumns =
         values.stream().distinct().filter(domainValues::contains).collect(Collectors.toList());
@@ -461,17 +493,65 @@ public class DataSetServiceImpl implements DataSetService {
 
   @Override
   public Map<String, QueryJobConfiguration> domainToBigQueryConfig(DataSetRequest dataSetRequest) {
-    DbDataset dbDataset;
-    if (dataSetRequest.getDataSetId() != null) {
-      dbDataset = dataSetDao.findById(dataSetRequest.getDataSetId()).orElse(null);
-      // In case wrong dataSetId is passed to Api
-      if (dbDataset == null) {
-        throw new BadRequestException("Data Set Generate code Failed: Data set not found");
-      }
-    } else {
-      dbDataset = dataSetMapper.dataSetRequestToDb(dataSetRequest, null, clock);
+    DbDataset dbDataset = dataSetDao.findById(dataSetRequest.getDataSetId()).orElse(null);
+    // In case wrong dataSetId is passed to Api
+    if (dbDataset == null) {
+      throw new BadRequestException("Data Set Generate code Failed: Data set not found");
     }
     return buildQueriesByDomain(dbDataset);
+  }
+
+  public Map<String, QueryJobConfiguration> tanagraDomainToBigQueryConfig(
+      DataSetRequest dataSetRequest, DbWorkspace dbWorkspace) {
+    Map<String, QueryJobConfiguration> queryJobConfigurationMap;
+    List<EntityOutputPreview> previewList;
+    String underlayName = "aou" + dbWorkspace.getCdrVersion().getBigqueryDataset();
+
+    ExportPreviewRequest exportPreviewRequest =
+        createExportPreviewRequest(dataSetRequest, dbWorkspace);
+
+    try {
+      previewList =
+          tanagraApiProvider
+              .get()
+              .describeExport(exportPreviewRequest, underlayName)
+              .getEntityOutputs();
+    } catch (ApiException e) {
+      throw new BadRequestException("Bad Request: " + e.getMessage());
+    }
+    queryJobConfigurationMap =
+        previewList.stream()
+            .collect(
+                ImmutableMap.toImmutableMap(
+                    p -> TANAGRA_DOMAIN_MAP.get(p.getEntity()).toString(),
+                    p ->
+                        QueryJobConfiguration.newBuilder(
+                                replaceProjectIdAndDataSet(p, dbWorkspace.getCdrVersion()))
+                            .setUseLegacySql(false)
+                            .build()));
+
+    return queryJobConfigurationMap;
+  }
+
+  @org.jetbrains.annotations.NotNull
+  private String replaceProjectIdAndDataSet(EntityOutputPreview p, DbCdrVersion dbCdrVersion) {
+    String regexToFixTicks = "`([^`]+)`\\.([^\\s]+)";
+    String query = p.getIndexSql();
+    String cdrProject =
+        query.contains(LOCAL_CDR_STRING) ? LOCAL_CDR_STRING : dbCdrVersion.getBigqueryProject();
+    return p.getIndexSql()
+        .replaceAll(regexToFixTicks, "`$1.$2`")
+        .replace(cdrProject + "." + dbCdrVersion.getBigqueryDataset(), "${projectId}.${dataSetId}");
+  }
+
+  private ExportPreviewRequest createExportPreviewRequest(
+      DataSetRequest dataSetRequest, DbWorkspace dbWorkspace) {
+    ExportPreviewRequest exportPreviewRequest =
+        new ExportPreviewRequest()
+            .study(dbWorkspace.getWorkspaceNamespace())
+            .cohorts(dataSetRequest.getTanagraCohortIds())
+            .conceptSets(dataSetRequest.getTanagraConceptSetIds());
+    return exportPreviewRequest;
   }
 
   private Map<String, QueryJobConfiguration> buildQueriesByDomain(DbDataset dbDataset) {
@@ -548,7 +628,7 @@ public class DataSetServiceImpl implements DataSetService {
         || prePackagedConceptSet.contains(PrePackagedConceptSetEnum.BOTH)) {
       selectedConceptSetsBuilder.addAll(buildPrePackagedSurveyConceptSets(prePackagedConceptSet));
     } else {
-      // If pre packaged all survey concept set is selected create a temp concept set with concept
+      // If pre-packaged all survey concept set is selected create a temp concept set with concept
       // ids of all survey questions
       if (prePackagedConceptSet.contains(SURVEY)
           || prePackagedConceptSet.contains(PrePackagedConceptSetEnum.BOTH)) {
@@ -718,7 +798,7 @@ public class DataSetServiceImpl implements DataSetService {
     }
   }
 
-  // In some cases, we don't require concept IDs, and in others their absense is fatal.
+  // In some cases, we don't require concept IDs, and in others their absence is fatal.
   // Even if Concept IDs have been selected, these don't work with all domains.
   @VisibleForTesting
   public Optional<String> buildConceptIdListClause(
@@ -763,7 +843,7 @@ public class DataSetServiceImpl implements DataSetService {
                     d ->
                         PRE_PACKAGED_SURVEY_CONCEPT_IDS.get(
                             PrePackagedConceptSetEnum.valueOf(d.getName())))
-                .collect(Collectors.toList()));
+                .toList());
       }
     } else {
       dbConceptSetConceptIds.addAll(findMultipleDomainConceptIds(domain, dbConceptSetIds));
@@ -892,11 +972,15 @@ public class DataSetServiceImpl implements DataSetService {
     // workspace ID.
     dataSetExportRequest.getDataSetRequest().setWorkspaceId(dbWorkspace.getWorkspaceId());
 
+    DbCdrVersion dbCdrVersion = dbWorkspace.getCdrVersion();
+
     validateDataSetRequestResources(
-        dbWorkspace.getWorkspaceId(), dataSetExportRequest.getDataSetRequest());
+        dbWorkspace.getWorkspaceId(), dataSetExportRequest.getDataSetRequest(), dbCdrVersion);
 
     Map<String, QueryJobConfiguration> queriesByDomain =
-        domainToBigQueryConfig(dataSetExportRequest.getDataSetRequest());
+        dbCdrVersion.getTanagraEnabled()
+            ? tanagraDomainToBigQueryConfig(dataSetExportRequest.getDataSetRequest(), dbWorkspace)
+            : domainToBigQueryConfig(dataSetExportRequest.getDataSetRequest());
 
     String qualifier = generateRandomEightCharacterQualifier();
 
@@ -911,11 +995,16 @@ public class DataSetServiceImpl implements DataSetService {
                             dbWorkspace.getCdrVersion().getName(),
                             qualifier,
                             dataSetExportRequest.getAnalysisLanguage(),
-                            bigQueryService.getTableFieldsFromDomain(
-                                Domain.fromValue(entry.getKey())))
+                            generateFieldList(dbCdrVersion, Domain.fromValue(entry.getKey())))
                             .stream()),
             generateWgsCode(dataSetExportRequest, dbWorkspace, qualifier).stream())
         .toList();
+  }
+
+  private FieldList generateFieldList(DbCdrVersion dbCdrVersion, Domain domain) {
+    return dbCdrVersion.getTanagraEnabled()
+        ? bigQueryService.getTableFieldsFromDomainForTanagra(TANAGRA_DOMAIN_MAP.getKey(domain))
+        : bigQueryService.getTableFieldsFromDomain(domain);
   }
 
   private List<String> generateWgsCode(
@@ -949,7 +1038,7 @@ public class DataSetServiceImpl implements DataSetService {
     };
   }
 
-  // ericsong: I really dislike using @VisibleForTesting but I couldn't help it until the
+  // ericsong: I really dislike using @VisibleForTesting, but I couldn't help it until the
   // refactoring in RW-6808 is complete. Then this function should be part of the public
   // interface for GenomicsExtractionService instead of just a private implementation detail
   // of DataSetService's generateCodeCells
@@ -1344,12 +1433,29 @@ public class DataSetServiceImpl implements DataSetService {
   }
 
   /** Validate that the requested resources are contained by the given workspace. */
-  private void validateDataSetRequestResources(long workspaceId, DataSetRequest request) {
-    if (request.getDataSetId() != null) {
-      mustGetDbDataset(workspaceId, request.getDataSetId());
+  private void validateDataSetRequestResources(
+      long workspaceId, DataSetRequest request, DbCdrVersion dbCdrVersion) {
+    if (dbCdrVersion.getTanagraEnabled()) {
+      tanagraValidateCohortsInWorkspace(request.getTanagraCohortIds());
+      tanagraValidateConceptSetsInWorkspace(request.getTanagraConceptSetIds());
     } else {
-      validateCohortsInWorkspace(workspaceId, request.getCohortIds());
-      validateConceptSetsInWorkspace(workspaceId, request.getConceptSetIds());
+      if (request.getDataSetId() == null) {
+        throw new BadRequestException("DataSetRequest.dataSetId can not be null.");
+      } else {
+        mustGetDbDataset(workspaceId, request.getDataSetId());
+      }
+    }
+  }
+
+  private void tanagraValidateCohortsInWorkspace(@Nullable List<String> cohortIds) {
+    if (CollectionUtils.isEmpty(cohortIds)) {
+      throw new BadRequestException("DataSetRequest.cohortIds can not be null.");
+    }
+  }
+
+  private void tanagraValidateConceptSetsInWorkspace(@Nullable List<String> conceptSetIds) {
+    if (CollectionUtils.isEmpty(conceptSetIds)) {
+      throw new BadRequestException("DataSetRequest.conceptSetIds can not be null.");
     }
   }
 
@@ -1358,9 +1464,7 @@ public class DataSetServiceImpl implements DataSetService {
       return;
     }
     List<Long> workspaceCohortIds =
-        cohortService.findByWorkspaceId(workspaceId).stream()
-            .map(Cohort::getId)
-            .collect(Collectors.toList());
+        cohortService.findByWorkspaceId(workspaceId).stream().map(Cohort::getId).toList();
 
     if (!workspaceCohortIds.containsAll(cohortIds)) {
       throw new NotFoundException("one or more of the requested cohorts were not found");
@@ -1373,9 +1477,7 @@ public class DataSetServiceImpl implements DataSetService {
       return;
     }
     List<Long> workspaceConceptSetIds =
-        conceptSetService.findByWorkspaceId(workspaceId).stream()
-            .map(ConceptSet::getId)
-            .collect(Collectors.toList());
+        conceptSetService.findByWorkspaceId(workspaceId).stream().map(ConceptSet::getId).toList();
     if (!workspaceConceptSetIds.containsAll(conceptSetIds)) {
       throw new NotFoundException("one or more of the requested concept sets were not found");
     }
@@ -1752,7 +1854,7 @@ public class DataSetServiceImpl implements DataSetService {
                 cs ->
                     cs.getConceptSetConceptIds().stream()
                         .filter(c -> c.isStandard() == Boolean.FALSE))
-            .collect(Collectors.toList());
+            .toList();
 
     Long[] sourceConceptIds =
         dbPossibleSourceConceptIds.stream()
@@ -1786,7 +1888,7 @@ public class DataSetServiceImpl implements DataSetService {
                         .addConceptId(conceptId.get(0).getLongValue())
                         .addStandard(Boolean.FALSE)
                         .build())
-            .collect(Collectors.toList());
+            .toList();
 
     dbConceptSetConceptIds.addAll(sourceConceptIdsToAdd);
     return dbConceptSetConceptIds;
